force-app/main/default/objects/Lead/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <label>Handler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>