force-app/main/default/objects/Lead/fields/Customer_Marketing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Marketing_Owner__c</fullName>
    <label>Customer Marketing Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>