force-app/main/default/objects/Lead/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-45</fullName>
            </value>
            <value>
                <fullName>46-200</fullName>
            </value>
            <value>
                <fullName>201-1000</fullName>
            </value>
            <value>
                <fullName>1001-4500</fullName>
            </value>
            <value>
                <fullName>4501-10000</fullName>
            </value>
            <value>
                <fullName>10001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>