force-app/main/default/objects/Lead/fields/Is_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer</label>
    <type>Checkbox</type>
</CustomField>