force-app/main/default/objects/Lead/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Alliances</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>General Management</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Merchandising</fullName>
            </value>
            <value>
                <fullName>Omni-channel</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Purchasing &amp; Procurement</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Store Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>