force-app/main/default/objects/Lead/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Level</fullName>
            </value>
            <value>
                <fullName>C Level</fullName>
            </value>
            <value>
                <fullName>Executive Level</fullName>
            </value>
            <value>
                <fullName>Director Level</fullName>
            </value>
            <value>
                <fullName>Manager Level</fullName>
            </value>
            <value>
                <fullName>Staff Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>