force-app/main/default/objects/Lead/fields/Org62_Link__c.field-meta.xml
<CustomField>
    <fullName>Org62_Link__c</fullName>
    <label>Org62 Link</label>
    <type>Url</type>
</CustomField>