force-app/main/default/objects/Lead/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pronouns</valueSetName>
    </valueSet>
</CustomField>