force-app/main/default/objects/Lead/fields/Speaker_Fee_Range__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Fee_Range__c</fullName>
    <label>Speaker Fee Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0</fullName>
            </value>
            <value>
                <fullName>$1-$3000</fullName>
            </value>
            <value>
                <fullName>$3001-$10000</fullName>
            </value>
            <value>
                <fullName>$10001-$25000</fullName>
            </value>
            <value>
                <fullName>$25001-$50000</fullName>
            </value>
            <value>
                <fullName>$50001-$100000</fullName>
            </value>
            <value>
                <fullName>$100001-$200000</fullName>
            </value>
            <value>
                <fullName>$200001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>