force-app/main/default/objects/Lead/fields/Speaker_Level__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Level__c</fullName>
    <label>Speaker Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Still Learning</fullName>
            </value>
            <value>
                <fullName>Almost There</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Above Average</fullName>
            </value>
            <value>
                <fullName>TED-level</fullName>
            </value>
            <value>
                <fullName>Oprah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>