force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Celebrity</fullName>
            </value>
            <value>
                <fullName>Public Official</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>ISV Partner</fullName>
            </value>
            <value>
                <fullName>SI Partner</fullName>
            </value>
            <value>
                <fullName>Blogger</fullName>
            </value>
            <value>
                <fullName>Independent Expert</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Industry Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>